syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nherson/psc/proto/api/v1;apiv1";

service PSCService {

  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

message ListEventsRequest {}
message ListEventsResponse {
  repeated Event events = 1;
}

message Event {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp date = 3;
}